syntax = "proto3";

import "board.proto";

package mcfs.status;

/**
 * Message to convey current system status. This should be sent infrequently.
 * If information needs to be sent at greater than 1hz, it is data 
 *
 * | Field          | Description                                              |
 * |----------------|----------------------------------------------------------|
 * | status_message | Optional custom status message                           |
 * | status         | Specific status                                          |
 */
message Status {
    optional string status_message = 1;

    oneof status {
        BoardStatus board_status = 2;
        ChannelStatus channel_status = 3;
        BoardInfo board_info = 4;
    }

}

/**
 * Board status 
 *
 * | Field          | Description                                              |
 * |----------------|----------------------------------------------------------|
 * | status         | board status code                                        |
 */
message BoardStatus {
    BoardStatusCode status = 1;
}

/**
 * Channel status 
 *
 * | Field          | Description                                              |
 * |----------------|----------------------------------------------------------|
 * | channel        | channel identifier                                       |
 * | status         | channel status code                                      |
 */
message ChannelStatus {
    mcfs.board.ChannelIdentifier channel = 1;
    ChannelStatusCode status = 2;
}


/**
 * Board info 
 *
 * | Field          | Description                                              |
 * |----------------|----------------------------------------------------------|
 * | board_id       | ID of sender                                             |
 * | board_type     | Board type of sender                                     |
 */
message BoardInfo {
    uint32 board_id = 1;
    mcfs.board.BoardType board_type = 2;
}

enum BoardStatusCode {
    BOARD_CONNECTED = 0;
    BOARD_DISCONNECTED = 1;
    BOARD_ERROR = 2;
}

enum ChannelStatusCode {
    CHANNEL_CONNECTED = 0;
    CHANNEL_DISCONNECTED = 1;
    CHANNEL_ERROR = 2;
}